Auto height for images in organogram to prevent squashing on leaders

--- a/app/assets/stylesheets/peoplefinder/organogram.scss
+++ b/app/assets/stylesheets/peoplefinder/organogram.scss
@@ -49,6 +49,11 @@
     .image-background {
       height: 150px;
       width: 150px;
+      .maginot {
+        img {
+          height: auto;
+        }
+      }
     }
     @include maginot(150px, 150px);
   }
